--- a/about/css/home.css
+++ b/about/css/home.css
@@ -1,6 +1,6 @@
 
 body{    
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url("../../images/cattheme.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url("../../images/cattheme.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
