--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url("../images/cattheme.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)), url("../images/cattheme.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
