--- a/foyer/css/home.css
+++ b/foyer/css/home.css
@@ -360,6 +360,8 @@ nav {
     margin: auto;
     max-width: 600px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    height: 175px;
+    overflow: hidden;
 }
 
 .fact-image {
