--- a/foyer/css/home.css
+++ b/foyer/css/home.css
@@ -144,6 +144,7 @@ nav {
     width: 100%;
     max-width: 500px;
     margin: 20px auto;
+    will-change: transform;
 }
 
 .explorer-titlebar {
@@ -412,4 +413,11 @@ nav {
     text-align: right;
     margin-top: 10px;
 }
+
+@keyframes shake {
+    0%, 100% { transform: translateX(0); }
+    10%, 30%, 50%, 70%, 90% { transform: translateX(-5px); }
+    20%, 40%, 60%, 80% { transform: translateX(5px); }
+}
+
 
