--- a/css/404.css
+++ b/css/404.css
@@ -53,18 +53,7 @@ nav {
 }
 
 .mainwindow { 
-    position: absolute;
-    user-select: none;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90vw;
-    max-width: 1000px;
-    max-height: 90vh;
-    padding: 0px 20px;
-    border: ridge 6px var(--orange);
-    background-color: var(--transparent-dark);
-    overflow-y: auto;
+    border-color: var(--orange);
     scrollbar-color: var(--orange) var(--main-dark);
 }
 
@@ -97,12 +86,7 @@ nav {
 
 @media only screen and (orientation: portrait) {
     .mainwindow {
-        position: relative;
-        top: auto;
-        left: auto;
-        transform: none;
-        max-height: calc(100vh - 120px);
-        margin: 20px auto;
+        margin: auto;
     }
 
     body {
@@ -111,10 +95,6 @@ nav {
         min-height: 100vh;
     }
 
-    .botbar {
-        position: relative;
-        margin-top: auto;
-    }
 }
 
 
