--- a/css/404.css
+++ b/css/404.css
@@ -85,16 +85,32 @@ nav {
 }
 
 @media only screen and (orientation: portrait) {
-    .mainwindow {
-        margin: auto;
-    }
-
     body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
+        overflow: hidden;
+        height: 100vh;
+        position: fixed;
+        width: 100%;
     }
 
+    .mainwindow {
+        
+        -webkit-overflow-scrolling: touch;
+        
+
+        height: auto;
+    }
+    html, body {
+        overflow-x: hidden;
+        width: 100%;
+    }
+}
+
+body {
+    touch-action: none;
+}
+
+.mainwindow {
+    touch-action: auto;
 }
 
 
