--- a/foyer/css/home.css
+++ b/foyer/css/home.css
@@ -76,7 +76,6 @@ nav {
 .logmenu{
     width: 30%;
     max-width: 320px;
-
     display: flex;
     flex-direction: column;
 }
@@ -146,15 +145,19 @@ nav {
 
 .explorer-titlebar {
     background-color: var(--purple);
+    border-bottom: 2px solid color-mix(in srgb, var(--purple) 70%, black);
     font-family: "dos", monospace;
-    height: 30px;
+    height: 35px;
     display: flex;
     align-items: center;
     padding: 0 10px;
+    position: relative;
+    padding: 0 10px;
+    font-size: 1.06em;
+
 }
 
 .folder-up-button {
-
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -166,22 +169,57 @@ nav {
     background: none;
 }
 
+.windowbuttons{
+    display: flex;
+    gap: 3.9px;
+    margin-right: auto;
+    order: 1;
+}
+
+
+.windowbuttons img{
+    width: 28px;
+    height: 28px;
+    image-rendering: pixelated;
+    filter: 
+    brightness(0) saturate(100%) 
+    invert(89%) 
+    sepia(15%) 
+    hue-rotate(230deg)
+    saturate(400%);
+    
+    
+}
+
 .folder-up-icon {
 
-    width: 25px;
-    height: 25px;
+    width: 28px;
+    height: 28px;
     image-rendering: pixelated;
-    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+    filter: 
+    brightness(0) saturate(100%) 
+    invert(89%) 
+    sepia(15%) 
+    hue-rotate(230deg)
+    saturate(400%);
+    pointer-events: none;
+}
+
+.windowbuttons img:hover{
+    filter: none; 
 }
 
 
 .folder-up-button:hover .folder-up-icon {
     filter: none;
+    background: none;
+    background-color: transparent !important;
 }
 
 
 .explorer-titlebar > span {
     flex-grow: 1;
+    letter-spacing: 0.4px;
 }
 
 .explorer-content {
@@ -427,7 +465,7 @@ nav {
 .explorer-window {
     position: relative;
     opacity: 0;
-    animation: hard-blink 0.8s steps(1) forwards;
+    animation: hard-blink 0.2s steps(1) forwards;
     
 }
 
@@ -441,6 +479,22 @@ nav {
     opacity: 0;
     animation: hard-blink 0.6s 0.5s steps(1) forwards;
 }
+
+.fact-box {
+    opacity: 0;
+    animation: hard-blink 0.6s 0.6s steps(1) forwards;
+    pointer-events: none;
+}
+
+
+.fact-image img,
+.fact-content {
+    opacity: 0;
+    animation: hard-blink 0.6s 0.6s steps(1) forwards;
+    pointer-events: none;
+}
+
+
 
 .folder-row:nth-child(1) * {
     opacity: 0;
@@ -457,7 +511,13 @@ nav {
 .logmenu,
 .logmenu * {
     opacity: 0;
-    animation: hard-blink 0.6s 1.3s steps(1) forwards;
+    animation: hard-blink 0.2s 0.7s steps(1) forwards;
+}
+
+.logbox,
+.logbox *{
+    opacity: 0;
+    animation: hard-blink 0.2s 1.3s steps(1) forwards;
 }
 
 .explorer-window {
@@ -500,20 +560,6 @@ nav {
     }
 }
 
-
-.fact-box {
-    opacity: 0;
-    animation: hard-blink 0.6s 1.1s steps(1) forwards;
-    pointer-events: none;
-}
-
-
-.fact-image img,
-.fact-content {
-    opacity: 0;
-    animation: hard-blink 0.6s 1.1s steps(1) forwards;
-    pointer-events: none;
-}
 
 
 .explorer-window.ready,
