--- a/files/css/files.css
+++ b/files/css/files.css
@@ -117,6 +117,11 @@ body {
     border-left: 2px solid var(--purple);
     border-right: 2px solid var(--purple);
     background: rgba(0, 0, 0, 0.3);
+    
+}
+
+.listtable.transitioning{
+    opacity: 0;
 }
 
 .listtable th {
@@ -134,6 +139,7 @@ body {
 .listtable td a {
     position: relative;
     padding-left: 30px;
+    
 }
 
 .listtable td a:before {
@@ -214,3 +220,18 @@ body {
 .dos-prompt span.purple {
     letter-spacing: 2px;
 }
+
+@keyframes pixelReveal {
+    0% {
+      clip-path: inset(100% 0 0 0);
+    }
+    100% {
+      clip-path: inset(0 0 0 0);
+    }
+  }
+  
+.mainwindows {
+animation: pixelReveal 0.5s steps(10) forwards;
+}
+  
+
