--- a/css/style.css
+++ b/css/style.css
@@ -760,3 +760,10 @@ body::before{
         height: 55px; 
     }
 }
+
+a.disabled {
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.5;
+    color: #888;
+}
